Update jvm GC for mac